deploy/re-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goorm-task2-mysql-dp
  namespace: goorm
  labels:
    app: goorm-task2
spec:
  selector:
    matchLabels:
      app: goorm-task2
      tier: database
  template:
    metadata:
      labels:
        app: goorm-task2
        tier: database
    spec:
      nodeSelector:
        app: database-node
      containers:
        - image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: goorm-task2-mysql

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: goorm-task2-back-dp
  namespace: goorm
  labels:
    app: goorm-task2
spec:
  selector:
    matchLabels:
      app: goorm-task2
      tier: backend
  template:
    metadata:
      labels:
        app: goorm-task2
        tier: backend
    spec:
      containers:
        - image: mk1dev662/goorm-task2:latest
          name: goorm-task2-back-dp
          ports:
            - containerPort: 80
