deploy/re-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goorm-task2-ingress
  namespace: goorm
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: goorm-task2-spring
                port:
                  number: 80
